%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: HajPojken
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Pushing
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Jump
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Falling
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: ThrowMode
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Throw
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: PushButton
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs: []
  m_BlendParameter: Speed
  m_BlendParameterY: Speed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110205401}
  m_TransitionDuration: .0315974504
  m_TransitionOffset: 1.58625269e-07
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: .25
    m_ExitTime: .872881353
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110100257
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205401}
  m_DstState: {fileID: 110287156}
  m_TransitionDuration: .241935492
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Pushing
    m_EventTreshold: 0
    m_ExitTime: .758064508
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110100984
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110284397}
  m_DstState: {fileID: 110287156}
  m_TransitionDuration: .74999994
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: .25
    m_ExitTime: .25000006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110103554
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110287156}
  m_DstState: {fileID: 110205401}
  m_TransitionDuration: .197368398
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Pushing
    m_EventTreshold: 0
    m_ExitTime: .802631617
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110104893
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110202340}
  m_TransitionDuration: .0244358256
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .872881353
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107175
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268223}
  m_DstState: {fileID: 110275122}
  m_TransitionDuration: .961538732
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Throw
    m_EventTreshold: 0
    m_ExitTime: .0384612679
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110108360
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110292213}
  m_TransitionDuration: .127118647
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .872881353
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110112783
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110221986}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .267857134
  m_TransitionOffset: .704042435
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .200000003
    m_ExitTime: .732142866
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110120379
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110244888}
  m_DstState: {fileID: 110221986}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110125114
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 0}
  m_TransitionDuration: .735294282
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .264705718
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110126655
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110249780}
  m_DstState: {fileID: 110221986}
  m_TransitionDuration: .144877046
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Falling
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110131571
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289657}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .192307681
  m_TransitionOffset: .141858265
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: ThrowMode
    m_EventTreshold: 0
    m_ExitTime: .810000002
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133156
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110287156}
  m_DstState: {fileID: 110284397}
  m_TransitionDuration: .163610175
  m_TransitionOffset: .0760077313
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .802631617
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110134277
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268223}
  m_DstState: {fileID: 110280411}
  m_TransitionDuration: .961538732
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: ThrowMode
    m_EventTreshold: 0
    m_ExitTime: .0384612679
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110134361
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205401}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .241935492
  m_TransitionOffset: .562461197
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .172640651
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110135896
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110206798}
  m_DstState: {fileID: 110268223}
  m_TransitionDuration: .441176474
  m_TransitionOffset: .647855759
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: .860000014
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110142017
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110225531}
  m_DstState: {fileID: 110284397}
  m_TransitionDuration: .294794381
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: -.100000001
    m_ExitTime: .802631617
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110144431
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110280411}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .441176474
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: .558823526
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110154233
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110297857}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Pushing
    m_EventTreshold: 0
    m_ExitTime: .0683996975
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110156892
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110287156}
  m_DstState: {fileID: 110205401}
  m_TransitionDuration: .197368398
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Pushing
    m_EventTreshold: 0
    m_ExitTime: .802631617
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110157218
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110202340}
  m_DstState: {fileID: 110249780}
  m_TransitionDuration: .375
  m_TransitionOffset: .00850746222
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: 1.00486279
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110157650
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110292213}
  m_DstState: {fileID: 110249780}
  m_TransitionDuration: .393125087
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Falling
    m_EventTreshold: 0
    m_ExitTime: .986575067
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110159789
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110221986}
  m_DstState: {fileID: 110205401}
  m_TransitionDuration: .219051942
  m_TransitionOffset: .517792463
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: .200000003
    m_ExitTime: .589999974
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110161577
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110244888}
  m_DstState: {fileID: 110249780}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110165720
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110284397}
  m_DstState: {fileID: 110257825}
  m_TransitionDuration: .74999994
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Pushing
    m_EventTreshold: 0
    m_ExitTime: .25000006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110166795
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110297857}
  m_DstState: {fileID: 110284397}
  m_TransitionDuration: .000965669053
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: ThrowMode
    m_EventTreshold: 0
    m_ExitTime: .659090877
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110167109
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110275122}
  m_DstState: {fileID: 110268223}
  m_TransitionDuration: .214285702
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .898973525
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110172756
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205401}
  m_DstState: {fileID: 110292213}
  m_TransitionDuration: .16247724
  m_TransitionOffset: .582432449
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .476289004
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110176093
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110216902}
  m_TransitionDuration: .0106082037
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: .989391804
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110184213
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110216902}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .174418479
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: .829999983
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110185268
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289657}
  m_DstState: {fileID: 110206798}
  m_TransitionDuration: .0043178359
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: 1
  - m_ConditionMode: 1
    m_ConditionEvent: ThrowMode
    m_EventTreshold: 0
    m_ExitTime: .807692289
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110185797
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110275122}
  m_DstState: {fileID: 110289657}
  m_TransitionDuration: .214285702
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110186225
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110292213}
  m_DstState: {fileID: 110205401}
  m_TransitionDuration: .182926819
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .817073166
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110191578
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205401}
  m_DstState: {fileID: 110249780}
  m_TransitionDuration: .25
  m_TransitionOffset: .251693815
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Falling
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110196319
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110257825}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: 0
  m_TransitionOffset: .0283355359
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: PushButton
    m_EventTreshold: 0
    m_ExitTime: .871751726
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110199420
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110289657}
  m_TransitionDuration: .0183514468
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: ThrowMode
    m_EventTreshold: 0
    m_ExitTime: .872881353
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110199807
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110284397}
  m_DstState: {fileID: 110225531}
  m_TransitionDuration: .74999994
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: -.25
    m_ExitTime: .25000006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400028, guid: e0f1f782c7fae254c93f6b24d2b63cb0, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110202340
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle Jump
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 120, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110205401
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Run
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -228, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110206798
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Throw Position
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400018, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110216902
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Push Button
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400024, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 492, y: -252, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110221986
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Land
  m_Speed: 3
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400028, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -72, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110225531
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Pull
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 72, y: 240, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110244888
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -706, y: -369, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110249780
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Fallin'
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -96, y: -324, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110257825
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Push/Pull End
  m_Speed: -1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -96, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110268223
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Throw Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400018, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: 12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110275122
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Throw
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400022, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: -60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110280411
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Throw End
  m_Speed: -1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400018, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: 72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110284397
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Push/Pull Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400014, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 0, y: 180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110287156
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Push
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -228, y: 180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110289657
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Throw Prepare
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400016, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 216, y: -60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110292213
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Jump
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -492, y: -312, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110297857
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Push/Pull Prepare
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: 9ad224d03370d7b4caf4dbb9f84094ed, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 120, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110205401}
  - {fileID: 110292213}
  - {fileID: 110249780}
  - {fileID: 110297857}
  - {fileID: 110287156}
  - {fileID: 110225531}
  - {fileID: 110284397}
  - {fileID: 110289657}
  - {fileID: 110275122}
  - {fileID: 110268223}
  - {fileID: 110280411}
  - {fileID: 110257825}
  - {fileID: 110221986}
  - {fileID: 110202340}
  - {fileID: 110206798}
  - {fileID: 110216902}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110154233}
      - {fileID: 110199420}
      - {fileID: 110104893}
      - {fileID: 110176093}
    data:
      first: {fileID: 110205401}
      second:
      - {fileID: 110134361}
      - {fileID: 110172756}
      - {fileID: 110100257}
      - {fileID: 110191578}
    data:
      first: {fileID: 110292213}
      second:
      - {fileID: 110186225}
      - {fileID: 110157650}
    data:
      first: {fileID: 110249780}
      second:
      - {fileID: 110126655}
    data:
      first: {fileID: 110297857}
      second:
      - {fileID: 110166795}
    data:
      first: {fileID: 110287156}
      second:
      - {fileID: 110133156}
      - {fileID: 110156892}
    data:
      first: {fileID: 110225531}
      second:
      - {fileID: 110142017}
    data:
      first: {fileID: 110284397}
      second:
      - {fileID: 110199807}
      - {fileID: 110100984}
      - {fileID: 110165720}
    data:
      first: {fileID: 110289657}
      second:
      - {fileID: 110185268}
      - {fileID: 110131571}
    data:
      first: {fileID: 110275122}
      second:
      - {fileID: 110185797}
    data:
      first: {fileID: 110268223}
      second:
      - {fileID: 110107175}
      - {fileID: 110134277}
    data:
      first: {fileID: 110280411}
      second:
      - {fileID: 110144431}
    data:
      first: {fileID: 110257825}
      second:
      - {fileID: 110196319}
    data:
      first: {fileID: 110221986}
      second:
      - {fileID: 110159789}
      - {fileID: 110112783}
    data:
      first: {fileID: 110202340}
      second:
      - {fileID: 110157218}
    data:
      first: {fileID: 110206798}
      second:
      - {fileID: 110135896}
    data:
      first: {fileID: 110216902}
      second:
      - {fileID: 110184213}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -360, y: 12, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
